2011-03-03  Maciej W. Rozycki  <macro@codesourcery.com>

	* lib/remote.exp (remote_expect): Pass all exception conditions up
	to the caller.

2011-03-01  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* lib/dg.exp (dg-test): Support nested calls.

2010-04-13  Ben Elliston  <bje@gnu.org>

	* testglue.c: Remove duplicated prototypes for abort and exit.

2010-03-26  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* doc/user.xml (Tcl Variables For Command Line Options): Correct
	column count.

2010-01-21  Jie Zhang  <jie.zhang@analog.com>

	* config/gdb-comm.exp (gdb_comm_load): Set breakpoints after load.

2010-01-15  Anthony Green  <green@moxielogic.com>

	* baseboards/moxie-sim.exp: New baseboard.

2009-12-10  DJ Delorie  <dj@redhat.com>

	* baseboards/rx-sim.exp: New baseboard.

2009-10-15  Ben Elliston  <bje@gnu.org>

	* MAINTAINERS: Remove refererence to Tom Tromey's Tcl style guide.
	This web page has disappeared.

2009-07-06  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.xml, doc/ref.xml, doc/user.xml: Mark up options with
	<option> not <emphasis>.  Apply other grammatical fixes from
	Reuben Thomas.
	* doc/dejagnu.texi: Regenerate.

2009-07-06  Ben Elliston  <bje@gnu.org>

	* configure.ac: Check for docbook2x-texi.
	* configure: Regenerate.

2009-07-06  Ben Elliston  <bje@gnu.org>

	From Reuben Thomas  <rrt@sc3d.org>:
	* doc/runtest.1: Fix some formatting issues.

2009-06-16  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to most recent version.
	* config.sub: Likewise.

2009-06-16  Ben Elliston  <bje@gnu.org>

	* Makefile.am (rpm, deb, solpkg, hpdepot): Remove targets.
	* Makefile.in: Regenerate.
	* packaging: Remove directory and its contents.

2009-06-10  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/gdb-comm.exp (gdb_comm_add_breakpoint): Handle pending
	breakpoints.

2008-12-03  Ben Elliston  <bje@gnu.org>

	* COPYING: Update to GPL version 3.

2008-04-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/ref.xml, doc/user.xml: Fix typos.